--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,26 +4,30 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>tests.JobListingsPageTest</td>
+<td>tests.BrowseJobsTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>emailJobsButtonTest</td>
+<td>Java</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>saveButtonTest</td>
+<td>Selelnium</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>urlSearchValuesTest</td>
+<td>ProjectManagerJobs</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>fullTimeTest</td>
+<td>Blockchain</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>DataAnaystJobs</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
