--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,28 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6ba293">  <td>20/08/12 22:07:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JobListingsPageTest.emailJobsButtonTest()[pri:0, instance:tests.JobListingsPageTest@25359ed8]">emailJobsButtonTest</td> 
-  <td>main@1074593562</td>   <td></td> </tr>
-<tr bgcolor="6ba293">  <td>20/08/12 22:07:37</td>   <td>15067</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JobListingsPageTest.fullTimeTest()[pri:0, instance:tests.JobListingsPageTest@25359ed8]">fullTimeTest</td> 
-  <td>main@1074593562</td>   <td></td> </tr>
-<tr bgcolor="6ba293">  <td>20/08/12 22:07:59</td>   <td>37110</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JobListingsPageTest.saveButtonTest()[pri:0, instance:tests.JobListingsPageTest@25359ed8]">saveButtonTest</td> 
-  <td>main@1074593562</td>   <td></td> </tr>
-<tr bgcolor="94d6b9">  <td>20/08/12 22:07:10</td>   <td>-11884</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUpMethod()[pri:0, instance:tests.JobListingsPageTest@25359ed8]">&gt;&gt;setUpMethod</td> 
-<td>&nbsp;</td>  <td>main@1074593562</td>   <td></td> </tr>
-<tr bgcolor="94d6b9">  <td>20/08/12 22:07:29</td>   <td>6871</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUpMethod()[pri:0, instance:tests.JobListingsPageTest@25359ed8]">&gt;&gt;setUpMethod</td> 
-<td>&nbsp;</td>  <td>main@1074593562</td>   <td></td> </tr>
-<tr bgcolor="94d6b9">  <td>20/08/12 22:07:50</td>   <td>27936</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUpMethod()[pri:0, instance:tests.JobListingsPageTest@25359ed8]">&gt;&gt;setUpMethod</td> 
-<td>&nbsp;</td>  <td>main@1074593562</td>   <td></td> </tr>
-<tr bgcolor="94d6b9">  <td>20/08/12 22:08:14</td>   <td>52167</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUpMethod()[pri:0, instance:tests.JobListingsPageTest@25359ed8]">&gt;&gt;setUpMethod</td> 
-<td>&nbsp;</td>  <td>main@1074593562</td>   <td></td> </tr>
-<tr bgcolor="94d6b9">  <td>20/08/12 22:07:28</td>   <td>5978</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDownMethod()[pri:0, instance:tests.JobListingsPageTest@25359ed8]">&lt;&lt;tearDownMethod</td> 
-<td>&nbsp;</td>  <td>main@1074593562</td>   <td></td> </tr>
-<tr bgcolor="94d6b9">  <td>20/08/12 22:07:48</td>   <td>26463</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDownMethod()[pri:0, instance:tests.JobListingsPageTest@25359ed8]">&lt;&lt;tearDownMethod</td> 
-<td>&nbsp;</td>  <td>main@1074593562</td>   <td></td> </tr>
-<tr bgcolor="94d6b9">  <td>20/08/12 22:08:13</td>   <td>51378</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDownMethod()[pri:0, instance:tests.JobListingsPageTest@25359ed8]">&lt;&lt;tearDownMethod</td> 
-<td>&nbsp;</td>  <td>main@1074593562</td>   <td></td> </tr>
-<tr bgcolor="94d6b9">  <td>20/08/12 22:08:23</td>   <td>61416</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDownMethod()[pri:0, instance:tests.JobListingsPageTest@25359ed8]">&lt;&lt;tearDownMethod</td> 
-<td>&nbsp;</td>  <td>main@1074593562</td>   <td></td> </tr>
-<tr bgcolor="6ba293">  <td>20/08/12 22:08:22</td>   <td>60278</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JobListingsPageTest.urlSearchValuesTest()[pri:0, instance:tests.JobListingsPageTest@25359ed8]">urlSearchValuesTest</td> 
-  <td>main@1074593562</td>   <td></td> </tr>
+<tr bgcolor="85dc6f">  <td>20/08/14 18:49:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrowseJobsTest.Blockchain()[pri:0, instance:tests.BrowseJobsTest@6f1de4c7]">Blockchain</td> 
+  <td>main@2056031695</td>   <td></td> </tr>
+<tr bgcolor="85dc6f">  <td>20/08/14 18:49:39</td>   <td>14932</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrowseJobsTest.DataAnaystJobs()[pri:0, instance:tests.BrowseJobsTest@6f1de4c7]">DataAnaystJobs</td> 
+  <td>main@2056031695</td>   <td></td> </tr>
+<tr bgcolor="85dc6f">  <td>20/08/14 18:49:53</td>   <td>28418</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrowseJobsTest.Java()[pri:0, instance:tests.BrowseJobsTest@6f1de4c7]">Java</td> 
+  <td>main@2056031695</td>   <td></td> </tr>
+<tr bgcolor="85dc6f">  <td>20/08/14 18:50:06</td>   <td>41448</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrowseJobsTest.ProjectManagerJobs()[pri:0, instance:tests.BrowseJobsTest@6f1de4c7]">ProjectManagerJobs</td> 
+  <td>main@2056031695</td>   <td></td> </tr>
+<tr bgcolor="85dc6f">  <td>20/08/14 18:50:19</td>   <td>54902</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrowseJobsTest.Selelnium()[pri:0, instance:tests.BrowseJobsTest@6f1de4c7]">Selelnium</td> 
+  <td>main@2056031695</td>   <td></td> </tr>
+<tr bgcolor="eaa59a">  <td>20/08/14 18:49:14</td>   <td>-10387</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUpMethod()[pri:0, instance:tests.BrowseJobsTest@6f1de4c7]">&gt;&gt;setUpMethod</td> 
+<td>&nbsp;</td>  <td>main@2056031695</td>   <td></td> </tr>
+<tr bgcolor="eaa59a">  <td>20/08/14 18:49:31</td>   <td>6502</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUpMethod()[pri:0, instance:tests.BrowseJobsTest@6f1de4c7]">&gt;&gt;setUpMethod</td> 
+<td>&nbsp;</td>  <td>main@2056031695</td>   <td></td> </tr>
+<tr bgcolor="eaa59a">  <td>20/08/14 18:49:45</td>   <td>20940</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUpMethod()[pri:0, instance:tests.BrowseJobsTest@6f1de4c7]">&gt;&gt;setUpMethod</td> 
+<td>&nbsp;</td>  <td>main@2056031695</td>   <td></td> </tr>
+<tr bgcolor="eaa59a">  <td>20/08/14 18:49:58</td>   <td>33834</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUpMethod()[pri:0, instance:tests.BrowseJobsTest@6f1de4c7]">&gt;&gt;setUpMethod</td> 
+<td>&nbsp;</td>  <td>main@2056031695</td>   <td></td> </tr>
+<tr bgcolor="eaa59a">  <td>20/08/14 18:50:12</td>   <td>47625</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUpMethod()[pri:0, instance:tests.BrowseJobsTest@6f1de4c7]">&gt;&gt;setUpMethod</td> 
+<td>&nbsp;</td>  <td>main@2056031695</td>   <td></td> </tr>
+<tr bgcolor="eaa59a">  <td>20/08/14 18:49:30</td>   <td>5569</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDownMethod()[pri:0, instance:tests.BrowseJobsTest@6f1de4c7]">&lt;&lt;tearDownMethod</td> 
+<td>&nbsp;</td>  <td>main@2056031695</td>   <td></td> </tr>
+<tr bgcolor="eaa59a">  <td>20/08/14 18:49:44</td>   <td>19653</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDownMethod()[pri:0, instance:tests.BrowseJobsTest@6f1de4c7]">&lt;&lt;tearDownMethod</td> 
+<td>&nbsp;</td>  <td>main@2056031695</td>   <td></td> </tr>
+<tr bgcolor="eaa59a">  <td>20/08/14 18:49:57</td>   <td>32921</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDownMethod()[pri:0, instance:tests.BrowseJobsTest@6f1de4c7]">&lt;&lt;tearDownMethod</td> 
+<td>&nbsp;</td>  <td>main@2056031695</td>   <td></td> </tr>
+<tr bgcolor="eaa59a">  <td>20/08/14 18:50:11</td>   <td>46335</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDownMethod()[pri:0, instance:tests.BrowseJobsTest@6f1de4c7]">&lt;&lt;tearDownMethod</td> 
+<td>&nbsp;</td>  <td>main@2056031695</td>   <td></td> </tr>
+<tr bgcolor="eaa59a">  <td>20/08/14 18:50:25</td>   <td>60371</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDownMethod()[pri:0, instance:tests.BrowseJobsTest@6f1de4c7]">&lt;&lt;tearDownMethod</td> 
+<td>&nbsp;</td>  <td>main@2056031695</td>   <td></td> </tr>
 </table>
