--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,28 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="94d6b9">  <td>20/08/12 22:07:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUpMethod()[pri:0, instance:tests.JobListingsPageTest@25359ed8]">&gt;&gt;setUpMethod</td> 
-<td>&nbsp;</td>  <td>main@1074593562</td>   <td></td> </tr>
-<tr bgcolor="6ba293">  <td>20/08/12 22:07:22</td>   <td>11884</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JobListingsPageTest.emailJobsButtonTest()[pri:0, instance:tests.JobListingsPageTest@25359ed8]">emailJobsButtonTest</td> 
-  <td>main@1074593562</td>   <td></td> </tr>
-<tr bgcolor="94d6b9">  <td>20/08/12 22:07:28</td>   <td>17862</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDownMethod()[pri:0, instance:tests.JobListingsPageTest@25359ed8]">&lt;&lt;tearDownMethod</td> 
-<td>&nbsp;</td>  <td>main@1074593562</td>   <td></td> </tr>
-<tr bgcolor="94d6b9">  <td>20/08/12 22:07:29</td>   <td>18755</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUpMethod()[pri:0, instance:tests.JobListingsPageTest@25359ed8]">&gt;&gt;setUpMethod</td> 
-<td>&nbsp;</td>  <td>main@1074593562</td>   <td></td> </tr>
-<tr bgcolor="6ba293">  <td>20/08/12 22:07:37</td>   <td>26951</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JobListingsPageTest.fullTimeTest()[pri:0, instance:tests.JobListingsPageTest@25359ed8]">fullTimeTest</td> 
-  <td>main@1074593562</td>   <td></td> </tr>
-<tr bgcolor="94d6b9">  <td>20/08/12 22:07:48</td>   <td>38347</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDownMethod()[pri:0, instance:tests.JobListingsPageTest@25359ed8]">&lt;&lt;tearDownMethod</td> 
-<td>&nbsp;</td>  <td>main@1074593562</td>   <td></td> </tr>
-<tr bgcolor="94d6b9">  <td>20/08/12 22:07:50</td>   <td>39820</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUpMethod()[pri:0, instance:tests.JobListingsPageTest@25359ed8]">&gt;&gt;setUpMethod</td> 
-<td>&nbsp;</td>  <td>main@1074593562</td>   <td></td> </tr>
-<tr bgcolor="6ba293">  <td>20/08/12 22:07:59</td>   <td>48994</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JobListingsPageTest.saveButtonTest()[pri:0, instance:tests.JobListingsPageTest@25359ed8]">saveButtonTest</td> 
-  <td>main@1074593562</td>   <td></td> </tr>
-<tr bgcolor="94d6b9">  <td>20/08/12 22:08:13</td>   <td>63262</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDownMethod()[pri:0, instance:tests.JobListingsPageTest@25359ed8]">&lt;&lt;tearDownMethod</td> 
-<td>&nbsp;</td>  <td>main@1074593562</td>   <td></td> </tr>
-<tr bgcolor="94d6b9">  <td>20/08/12 22:08:14</td>   <td>64051</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUpMethod()[pri:0, instance:tests.JobListingsPageTest@25359ed8]">&gt;&gt;setUpMethod</td> 
-<td>&nbsp;</td>  <td>main@1074593562</td>   <td></td> </tr>
-<tr bgcolor="6ba293">  <td>20/08/12 22:08:22</td>   <td>72162</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JobListingsPageTest.urlSearchValuesTest()[pri:0, instance:tests.JobListingsPageTest@25359ed8]">urlSearchValuesTest</td> 
-  <td>main@1074593562</td>   <td></td> </tr>
-<tr bgcolor="94d6b9">  <td>20/08/12 22:08:23</td>   <td>73300</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDownMethod()[pri:0, instance:tests.JobListingsPageTest@25359ed8]">&lt;&lt;tearDownMethod</td> 
-<td>&nbsp;</td>  <td>main@1074593562</td>   <td></td> </tr>
+<tr bgcolor="eaa59a">  <td>20/08/14 18:49:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUpMethod()[pri:0, instance:tests.BrowseJobsTest@6f1de4c7]">&gt;&gt;setUpMethod</td> 
+<td>&nbsp;</td>  <td>main@2056031695</td>   <td></td> </tr>
+<tr bgcolor="85dc6f">  <td>20/08/14 18:49:24</td>   <td>10387</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrowseJobsTest.Blockchain()[pri:0, instance:tests.BrowseJobsTest@6f1de4c7]">Blockchain</td> 
+  <td>main@2056031695</td>   <td></td> </tr>
+<tr bgcolor="eaa59a">  <td>20/08/14 18:49:30</td>   <td>15956</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDownMethod()[pri:0, instance:tests.BrowseJobsTest@6f1de4c7]">&lt;&lt;tearDownMethod</td> 
+<td>&nbsp;</td>  <td>main@2056031695</td>   <td></td> </tr>
+<tr bgcolor="eaa59a">  <td>20/08/14 18:49:31</td>   <td>16889</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUpMethod()[pri:0, instance:tests.BrowseJobsTest@6f1de4c7]">&gt;&gt;setUpMethod</td> 
+<td>&nbsp;</td>  <td>main@2056031695</td>   <td></td> </tr>
+<tr bgcolor="85dc6f">  <td>20/08/14 18:49:39</td>   <td>25319</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrowseJobsTest.DataAnaystJobs()[pri:0, instance:tests.BrowseJobsTest@6f1de4c7]">DataAnaystJobs</td> 
+  <td>main@2056031695</td>   <td></td> </tr>
+<tr bgcolor="eaa59a">  <td>20/08/14 18:49:44</td>   <td>30040</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDownMethod()[pri:0, instance:tests.BrowseJobsTest@6f1de4c7]">&lt;&lt;tearDownMethod</td> 
+<td>&nbsp;</td>  <td>main@2056031695</td>   <td></td> </tr>
+<tr bgcolor="eaa59a">  <td>20/08/14 18:49:45</td>   <td>31327</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUpMethod()[pri:0, instance:tests.BrowseJobsTest@6f1de4c7]">&gt;&gt;setUpMethod</td> 
+<td>&nbsp;</td>  <td>main@2056031695</td>   <td></td> </tr>
+<tr bgcolor="85dc6f">  <td>20/08/14 18:49:53</td>   <td>38805</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrowseJobsTest.Java()[pri:0, instance:tests.BrowseJobsTest@6f1de4c7]">Java</td> 
+  <td>main@2056031695</td>   <td></td> </tr>
+<tr bgcolor="eaa59a">  <td>20/08/14 18:49:57</td>   <td>43308</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDownMethod()[pri:0, instance:tests.BrowseJobsTest@6f1de4c7]">&lt;&lt;tearDownMethod</td> 
+<td>&nbsp;</td>  <td>main@2056031695</td>   <td></td> </tr>
+<tr bgcolor="eaa59a">  <td>20/08/14 18:49:58</td>   <td>44221</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUpMethod()[pri:0, instance:tests.BrowseJobsTest@6f1de4c7]">&gt;&gt;setUpMethod</td> 
+<td>&nbsp;</td>  <td>main@2056031695</td>   <td></td> </tr>
+<tr bgcolor="85dc6f">  <td>20/08/14 18:50:06</td>   <td>51835</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrowseJobsTest.ProjectManagerJobs()[pri:0, instance:tests.BrowseJobsTest@6f1de4c7]">ProjectManagerJobs</td> 
+  <td>main@2056031695</td>   <td></td> </tr>
+<tr bgcolor="eaa59a">  <td>20/08/14 18:50:11</td>   <td>56722</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDownMethod()[pri:0, instance:tests.BrowseJobsTest@6f1de4c7]">&lt;&lt;tearDownMethod</td> 
+<td>&nbsp;</td>  <td>main@2056031695</td>   <td></td> </tr>
+<tr bgcolor="eaa59a">  <td>20/08/14 18:50:12</td>   <td>58012</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUpMethod()[pri:0, instance:tests.BrowseJobsTest@6f1de4c7]">&gt;&gt;setUpMethod</td> 
+<td>&nbsp;</td>  <td>main@2056031695</td>   <td></td> </tr>
+<tr bgcolor="85dc6f">  <td>20/08/14 18:50:19</td>   <td>65289</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrowseJobsTest.Selelnium()[pri:0, instance:tests.BrowseJobsTest@6f1de4c7]">Selelnium</td> 
+  <td>main@2056031695</td>   <td></td> </tr>
+<tr bgcolor="eaa59a">  <td>20/08/14 18:50:25</td>   <td>70758</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDownMethod()[pri:0, instance:tests.BrowseJobsTest@6f1de4c7]">&lt;&lt;tearDownMethod</td> 
+<td>&nbsp;</td>  <td>main@2056031695</td>   <td></td> </tr>
 </table>
